WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313120
Element::setScrollLeft/setScrollTop: use clampToInteger() to avoid undefined behavior
https://bugs.webkit.org/show_bug.cgi?id=313120
Summary
Element::setScrollLeft/setScrollTop: use clampToInteger() to avoid undefined ...
Chris Dumez
Reported
2026-04-23 02:33:25 PDT
Element::setScrollLeft/setScrollTop: use clampToInteger() to avoid undefined behavior
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-23 02:35:15 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63414
EWS
Comment 2
2026-04-23 15:51:40 PDT
Committed
311904@main
(c35083f68066): <
https://commits.webkit.org/311904@main
> Reviewed commits have been landed. Closing PR #63414 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-04-23 15:52:12 PDT
<
rdar://problem/175462723
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug